[aliases]
release = sdist bdist_wheel
test = pytest

[bdist_wheel]
universal = 1

[metadata]
name = chaostoolkit-k8s-antiaging
url = https://github.com/schorzz/chaostoolkit-k8s-anti-aging
project_urls =
;    Docs: RTD = https://docs.chaostoolkit.org
    CI: GitHub = https://github.com/schorzz/chaostoolkit-k8s-anti-aging/actions
    GitHub: issues = https://github.com/schorzz/chaostoolkit-k8s-anti-aging/issues
    GitHub: repo = https://github.com/schorzz/chaostoolkit-k8s-anti-aging
description = Chaos Toolkit extension that helps to manage resources based on their age
long_description = file: README.md
long_description_content_type = text/markdown
author = Patrick Höling
author_email = p.hoeling@gmx.de
zip_safe = False
license_file = LICENSE
platforms = any
license = Apache License Version 2.0
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: Freely Distributable
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation
    Programming Language :: Python :: Implementation :: CPython

[options]
use_scm_version = True
python_requires = >=3.10
packages = find:
include_package_data = True
setup_requires =
    pytest_runner
    setuptools_scm>=1.15.0
    setuptools_scm_git_archive>=1.0
install_requires =
    chaostoolkit-lib~=1.25
    kubernetes==25.3.0
    pytz==2022.7.1
    chaostoolkit-kubernetes==0.26.3
tests_require = 
    requests-mock
    coverage
    pytest~=7.2.1; python_version >= '3.10'
    pytest-cov
    pytest-timeout
    black
    isort
    flake8
    faker==16.8.1

[tool:pytest]
testpaths = tests

python_files =
    test_*.py
    *_test.py
    tests.py
addopts =
    -v
    -rxs
    --cov antiaging
    --cov-report term-missing:skip-covered
    --cov-report xml
    -p no:warnings

[flake8]
select = C,E,F,W,B,B901
ignore = B011,E203,E741,W503,W504
max-line-length = 120
doctests = True

[isort]
profile = black
force_alphabetical_sort_within_sections = True
force_single_line = True
line_length = 120
lines_after_imports = 2

[black]
line-length = 120
